fix: mobile overflow issue

--- a/style.css
+++ b/style.css
@@ -517,6 +517,10 @@ button i {
   display: none;
 }
 
+.profiles-mobile .slick-next {
+  right: 0;
+}
+
 .our-team .team-members .profiles .profile {
   width: 200px;
   height: 520px;
@@ -1283,6 +1287,12 @@ button i {
 @media screen and (max-width: 1140px) {
   .our-approach {
     display: none;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .footer .footer-menu {
+    width: 100%;
   }
 }
 
